# playground

./: .gitignore  LICENSE  Makefile  README.md  git.md  homelab.yaml
.github/workflows/: build-istio-proxy.yaml  gh-release.yaml  istio-multicluster.yaml  kind.yaml  nighthawk.yaml
FE/: .gitignore  README.md
FE/ReactStarter/: ReactStarter.sln
FE/ReduxStarter/: ReduxStarter.sln
FE/bootstrap-timeline/: index.htm  simple-vertical.html  timeline.css
FE/express-startup/: package.json
FE/others/: BaiduMapDemo.html  autoNumeric.html
FE/plyr/: index.html
FE/select/: index.html
FE/typescript-vue-todomvc/: package.json
FE/typescript-vue-tutorial/: package.json  webpack.config.js
FE/vue-hackernewsclone/: README.md  index.html  package.json
FE/vue-startup/: .eslintrc.js  README.md  index.html  package.json
FE/vuex-startup/: README.md  index.html  package.json
appmesh/: README.md  client-injected.yaml  client.configdump.json  proxyinit.out  tls.md
appmesh/dump/: client-7444f5fffc-x9bzl.promtheus  pod-injected.yaml
appmesh/manifests/: base.yaml  manifest.yaml
argocd/: README.md  install.yaml
aws/: acm-pca-issuer.yaml  acm-pca-policy.json  acm.md  istio-networking.yaml  tid.yaml
aws/tid/: TID.md  tid-chart.md  tid-values.yaml  tid.yaml
backstage/httpbin/: catalog-info.yaml
backstage/sleep/: catalog-info.yaml
bash/: README.md  arg1.sh  arg2.sh  arg3.sh  array.sh  bool.sh  getter.sh  query-loki.sh  strings.sh  var.sh
bazel/: cache.md  docker-compose.yml
bazel/bazelrc/: envoy.bazelrc  proxy.bazelrc
centos/: upgrade-kernel.md
clang/: MODULE.bazel  README.md
clang/check_clang/: BUILD  main.cxx
clang/regex/: BUILD  Makefile  main.cxx
cloudsmith/: tips.md
csharp/: LICENSE  README.md
db/tsdb/: README.md
docker/: README.md  Trivy.md  docker-images-k8s.sh  local-registry.md
docker/buildx/: Dockerfile  README.md
docker/consul/: docker.md  (+1 more)
ebpf/: REAMDE.md
elk/: elk.yaml
envoy/: DOCS.md  README.md  WkacSQ0e.yaml  auto-host-rewrite.yaml  docker-compose.yml  envoy.yaml  local-proxy.yaml  otel-collector-config.yaml
envoy-gateway/: README.md  backen-tls.yaml  backend.yaml  eg.yaml  gc.yaml  infra-backend.yaml  manifests.yaml
envoy/istio-proxy/: CMakeLists.txt  sourcefiles.txt
gitconfig/: .gitconfig  REAME.md
github-actions/: README.md  preview-build.yml  preview-clean.yml  preview-deploy.yml
go/: README.md  awesome-go-pkg.md  go.mod  main.go
go-playgroud/: README.md  awesome-go-pkg.md  go.mod  go.sum
istio/: README.md  Telemetry.md  agent.prometheus  apply-demo.sh  blogs.md  build-replace-istiod.sh  dockerfile.pilot  docs.md  gen-annotations.md  helloworld-v1-78b9f5c87f-5pftj.yaml  metric-rotation.excalidraw  pilot.prometheus  prometheus.yaml  stats-ef.yaml
istio-proxy/: README.md
java/: .gitignore  README.md
k8s/: k8s.mk
karmada/: README.md
kuma/: README.md
kurator/: README.md  thanos.md
llvm/: build.sh
metallb/: install-metalb.sh
observability/: README.md  awesome-o11y.md  grafana-elb.yaml  loki.md  mesh-prometheus.excalidraw  otel-collector.md  pixie-vs-tetragon.md
tools/: draw.md  mdoc.md
ubuntu/: cmake.md  desktop.md  fail2ban.md  ubuntu-18.md
wsl/: install-go.sh
(+1868 files in other folders)
